css/main.css
/* ... */
#teaching-guide #tg-nav ul,
#about-page #tg-nav ul {
	list-style: none;
}

#teaching-guide .padded-img {
	padding-bottom: 25px;
}

#teaching-guide #main a {
	text-decoration: underline;
}

#teaching-guide #subheader a, #about-page #subheader a {
	text-decoration: none;
}

#new-service input {
	margin-bottom: 10px;
}

legend {
	font-family: 'Open Sans';
	font-weight: 700;
	color: #0F6095;
	font-size: 18px;
}

label {
	font-family: 'Open Sans';
	font-weight: 700;
	color: #0F6095;
	font-size: 14px;
}

#about-page #main hr {margin-bottom: 10px;}
#about-page #main h2 {margin-bottom: 10px;}

/* bootstrap additions */
.alert-success a{
	color: #FF4000;
}

.back-to-top {text-align: right;}

.back-to-top + p {
    border-top: solid 1px #BFBFBF;
    padding-top: 10px;
    margin-top: -10px;
}

.back-to-top a {
  margin-right: 20px;
  padding-top: -20px;
  background: #fff;
  padding: 0px 10px 0px 10px;
  text-decoration: none;
}

